--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title> CSS tabellen </title>
-<link rel="stylesheet" type="tekst/css" href="mijnstijl.css">
+<link rel="stylesheet" href="mijnstijl.css">
 </head>
 <header> Tabellen met kleuren </header>
 <body>
